src/app/4_portfolio/portfolio.component.scss
.PortfolioMajor{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    position: relative;
    margin-right: 10%;
    margin-left: 10%;
    width: 80%;

}

.myWork{
    // position: relative;
    // left: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    width: 100%;
    // padding-bottom: 50px;
    z-index: 0;
    
    h2{
        font-family: 'Baloo Bhai Regular';
        font-weight: 400;
        font-style: normal;
        font-size: clamp(64px, 10vw, 96px);
        // font-size: 96px;
        // text-align: center;
        line-height: 100%;
        color:#5988FF;
    }

}

.WorkSample{
    display: flex;
    justify-content: space-between;
    width: 100%;
    z-index: 1;

    p{
        font-family: 'Montserrat', sans-serif;
        font-weight: 400;
        font-style: normal;
        font-size: 23px;
        color: rgba(0, 0, 0, 1);
        line-height: 120%;
        margin-top:20px;
    }
}

.infos{
    display: flex;
    flex-direction: column;
    max-width: 30%;
    min-width: 15%;

}

.Projects_A{
    margin-bottom: 80px;
    display: flex;
    justify-content: space-between;
    // height: 400px;
    width: 100%;

    h3{
        font-family: 'Baloo Bhai Regular';
        font-weight: 400;
        font-style: normal;
        font-size: 45px;
        line-height: 120%;
        color:#5988FF;
    }

    img {
        height: 400px;
        width: 600px;
        margin-right: 5%;
        box-shadow: 5px 7px 7px rgba(0, 0, 0, 0.1);
        transition: all 200ms ease-out;

        &:hover{
            // transform: scale(1.1);
           
            // transform: translateY(-30px);
        }
    }

    .projectSkills{
        font-family: 'Montserrat';
        font-style: normal;
        font-weight: 400;
        font-size: 23px;
        line-height: 120%;
        color: #5988FF;
        
    }

    p{
        font-family: 'Montserrat';
        font-style: normal;
        font-weight: 400;
        font-size: 16px;
        line-height: 120%;
        color: #000000;
        margin-top: 20px;
        margin-bottom: 20px;
    }

    .links {
        width: 100%;
        display: flex;
        gap: 10px;
        
    }

    a{
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        padding: 15px 30px;
        gap: 10px;
        height: 25px;
        min-width: 86px;
        border: 2px solid #5988FF;

        filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.15));
        border-radius: 10px;
        
        font-family: 'Poppins';
        font-style: normal;
        font-weight: 400;
        font-size: 23px;
        line-height: 120%;
        color: white;
   
        text-decoration: none;

        transition: all 0.4s ease-in-out;
        background-image: linear-gradient(to right,#f8f8ff, #5988FF, #f8f8ff, #0043F0);
        background-size: 200%;
        // opacity: 0.4;

        &:hover {
            background-position: right;
            transition: all 0.4s ease-in-out;
            // opacity: 1;
            border: 2px solid #1955f1;
        }

        &:active {
            font-weight: bold;
            border: 2px solid #f8f8ff;
        }
    }
}

.Projects_B{
    margin-bottom: 80px;
    display: flex;
    justify-content: space-between;
    // height: 400px;
    width: 100%;

    h3{
        font-family: 'Baloo Bhai Regular';
        font-weight: 400;
        font-style: normal;
        font-size: 45px;
        line-height: 120%;
        color:#5988FF;
    }

    img {
        height: 400px;
        width: 600;
        margin-left: 5%;
        box-shadow: 5px 7px 7px rgba(0, 0, 0, 0.1);
        transition: all 75ms ease-out;

        &:hover{
            // transform: translateY(-30px);
        }
    }

    .projectSkills{
        font-family: 'Montserrat';
        font-style: normal;
        font-weight: 400;
        font-size: 23px;
        line-height: 120%;
        color: #5988FF;
    }

    p{
        font-family: 'Montserrat';
        font-style: normal;
        font-weight: 400;
        font-size: 16px;
        line-height: 120%;
        color: #000000;
        margin-top: 20px;
        margin-bottom: 20px;
    }

    .links {
        width: 100%;
        display: flex;
        gap: 10px;
    }

    a{
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        padding: 15px 30px;
        gap: 10px;
        height: 25px;
        min-width: 86px;
        border: 2px solid #5988FF;

        filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.15));
        border-radius: 10px;
        
        font-family: 'Poppins';
        font-style: normal;
        font-weight: 400;
        font-size: 23px;
        line-height: 120%;
        color: white;
   
        text-decoration: none;

        transition: all 0.4s ease-in-out;
        background-image: linear-gradient(to right,#f8f8ff, #5988FF, #f8f8ff, #0043F0);
        background-size: 200%;
        // opacity: 0.4;

        &:hover {
            background-position: right;
            transition: all 0.4s ease-in-out;
            // opacity: 1;
            border: 2px solid #1955f1;
        }
       
        &:active {
            font-weight: bold;
            border: 2px solid #f8f8ff;

        }
    }
}


//      <----    BUBBLES (unresponsive)   ---->


.WorkBubbleSmall{
    width: 100%;
    display: flex;
    justify-content: center;
    z-index: -3;

    img {
        height: 80px;
        margin-top: 30px;
        
    }
}

.WorkBubbleMid{
    height: 225px;
    width: 320px;
    padding-bottom: 30px;
    margin-top: -30px;
    padding-left: 40px;
}


 //  -----    BUBBLES Entwürfe (unresponsive)  ----- 



// .JoinBubbleBig{
//     // height: 500px;
//     // width: 50px;
//     background-image: url("/assets/img/bubble_blue_middle.svg");
//     background-size: 70vh;
//     background-repeat: no-repeat;
//     background-position: left;
//     width: calc(100vw - 90%);
//     // background-position-x: -300px;
//     // background-position-y: 500px;
//     z-index: -1;
// }

// .bubbleMid {
//     display: flex;
//     justify-content: space-between;
//     img {
//         height: 210px;
//         position: relative;
//         margin-top: -100px;
//         margin-left: 45%;
//         z-index: 3;
//     }
// }

// .bubbleSmall{
//     margin-right: 15%;
//     img {
//         height: 80px;
//         position: relative;
//         margin-top: 30px;
//         z-index: 3;
//     }
// }

// .bubbleSmallBackground{
//     background-image: url("/assets/img/bubble_blue_small.svg");
//     background-repeat: no-repeat;
//     height: 80px;
//     width: 80px;
//     padding-left: 40%;
//     padding-right: 15%;
//     position: absolute;
//     top: 30px;
//     img {
//         height: 80px;
//         position: relative;
//         margin-top: 30px;
//         z-index: 3;
//     }
// }



//    ----   Responsive Design   ----   //

@media screen and (min-width: 660px) and (max-width: 1199px) {

    
    .WorkSample{
        flex-direction: column;
    }

    .infos{
        min-width: 100%;
        align-items: center;

        p{
            // width: 100%;
            max-width: 50%;
        }

        .links{
            justify-content: center;
        }
    }

    .Projects_A{
        flex-direction: column;
        align-items: center;
        justify-content: unset;
        width: 100%;
        text-align: center;
        // height: 400px;
        
        h3{
            margin-top: 20px;
        }

        img {
            margin: 0;
        }
    }

    .Projects_B{
        flex-direction: column-reverse;
        align-items: center;
        justify-content: unset;
        width: 100%;
        text-align: center;

        h3{
            margin-top: 20px;
        }

        img {
            margin: 0;
        }
    }


    //      <!----    BUBBLES Responsive    ----!>


    .WorkBubbleSmall{
        margin-left: 20px;
    }

    .WorkBubbleMid{
        height: 120px;
        width: 120px;
        padding-bottom: 20px;
        margin-top: -5px;
        padding-left: 55%;
        z-index: 0;
    }

}


@media screen and (min-width: 481px) and (max-width: 659px) {

    .PortfolioMajor{
        margin-left: 2%;
        margin-right: 2%;
        width: 96%;
    }

    .WorkSample{
        flex-direction: column;
        align-items: flex-end;
        justify-content: unset;
    }

    .infos{
        min-width: 100%;
        align-items: center;

        p{
            max-width: 50%;
        }

        .links{
            justify-content: center;
        }
    }

    .Projects_A{
        flex-direction: column;
        align-items: center;
        justify-content: unset;
        width: 100%;
        text-align: center;
        
        h3{
            margin-top: 20px;
        }

        img {
            width: 90vw;
            height: auto;
            margin: 0;
        }
    }

    .Projects_B{
        flex-direction: column-reverse;
        align-items: center;
        justify-content: unset;
        width: 100%;
        text-align: center;

        h3{
            margin-top: 20px;
        }

        img {
            width: 90vw;
            height: auto;
            margin: 0;
        }
    }

    //      <!----    BUBBLES Responsive    ----!>


    .WorkBubbleSmall{
        margin-left: 20px;
    }

    .WorkBubbleMid{
        height: 120px;
        width: 120px;
        padding-bottom: 20px;
        margin-top: -5px;
        // padding-left: 55%;
        z-index: 0;
    }
}


@media screen and (min-width: 280px) and (max-width: 480px) {

    .PortfolioMajor{
        margin-left: 2%;
        margin-right: 2%;
        width: 96%;
    }

    .WorkSample{
        flex-direction: column;
        align-items: flex-end;
        justify-content: unset;
    }

    .infos{
        min-width: 100%;
        align-items: center;

        p{
            max-width: 50%;
        }

        .links{
            justify-content: center;
            flex-wrap: wrap;
        }
    }

    .Projects_A{
        flex-direction: column;
        align-items: center;
        justify-content: unset;
        width: 100%;
        text-align: center;
        
        h3{
            margin-top: 20px;
        }

        img {
            width: 90vw;
            height: auto;
            margin: 0;
        }
    }

    .Projects_B{
        flex-direction: column-reverse;
        align-items: center;
        justify-content: unset;
        width: 100%;
        text-align: center;

        h3{
            margin-top: 20px;
        }

        img {
            width: 90vw;
            height: auto;
            margin: 0;
        }
    }


        //      <!----    BUBBLES Responsive    ----!>


        .WorkBubbleSmall{
            margin-left: 50px;

            img {
                height: 50px;
            }
        }

        .WorkBubbleMid{
            height: 90px;
            width: 90px;
            padding-bottom: 20px;
            margin-top: -5px;
            // padding-left: 55%;
            z-index: 0;
        }
}

